cmake_minimum_required(VERSION 3.25)
project(graph_puzzle_game_nisantascioglu_main)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(graph_puzzle_game_nisantascioglu_main
        List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h List/Graph/EdgeList.h main.cpp List/Graph/Graph.cpp Array/DisjointSet.h)
